--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -13,7 +13,7 @@ This plugin provisions databases on AWS RDS using [Shuttle](https://www.shuttle.
 The RDS instance created by Shuttle has the following specifications and features by default:
 - 2 vCPU
 - 1 GB Memory
-- 30 GB Storage
+- 20 GiB Storage
 - Backups Disabled
 - Single Availability Zone
 - 1 Node
