--- a/tutorials/url-shortener.mdx
+++ b/tutorials/url-shortener.mdx
@@ -167,7 +167,9 @@ $ cargo shuttle deploy
 Ok... this seemed a little too easy, let's see if it works.
 
 ```sh
-$ curl -X https://url-shortener.shuttleapp.rs/hello
+$ curl -X GET https://url-shortener.shuttleapp.rs/ 
+OR 
+curl https://url-shortener.shuttleapp.rs/
 Hello, world!
 ```
 
