--- a/tutorials/url-shortener.mdx
+++ b/tutorials/url-shortener.mdx
@@ -128,7 +128,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.5.0-rc.4"
+rocket = "0.5.0"
 shuttle-rocket = { version = "0.33.0" }
 shuttle-runtime = { version = "0.33.0" }
 tokio = { version = "1.26.0" }
@@ -149,9 +149,9 @@ $ cargo shuttle deploy
    Compiling tokio-util v0.6.9
    Compiling multer v2.1.0
    Compiling hyper v0.14.27
-   Compiling rocket_http v0.5.0-rc.4
-   Compiling rocket_codegen v0.5.0-rc.4
-   Compiling rocket v0.5.0-rc.4
+   Compiling rocket_http v0.5.0
+   Compiling rocket_codegen v0.5.0
+   Compiling rocket v0.5.0
    Compiling shuttle-rocket v0.33.0
    Compiling shuttle-runtime v0.33.0
    Compiling url-shortener v0.1.0 (/opt/shuttle/crates/url-shortener)
