--- a/tutorials/url-shortener.mdx
+++ b/tutorials/url-shortener.mdx
@@ -112,7 +112,7 @@ fn index() -> &'static str {
 
 #[shuttle_runtime::main]
 async fn rocket() -> shuttle_rocket::ShuttleRocket {
-    let rocket = rocket::build().mount("/hello", routes![index]);
+    let rocket = rocket::build().mount("/", routes![index]);
 
     Ok(rocket.into())
 }
@@ -167,9 +167,7 @@ $ cargo shuttle deploy
 Ok... this seemed a little too easy, let's see if it works.
 
 ```sh
-$ curl -X GET https://url-shortener.shuttleapp.rs/ 
-OR 
-curl https://url-shortener.shuttleapp.rs/
+$ curl https://url-shortener.shuttleapp.rs/
 Hello, world!
 ```
 
