--- a/configuration/shuttle-versions.mdx
+++ b/configuration/shuttle-versions.mdx
@@ -13,14 +13,14 @@ Combining all of the above, these are the recommended steps for upgrading a Shut
 
 <Info>Note: Please check the [release page](https://github.com/shuttle-hq/shuttle/releases) for any considerations regarding breaking changes in the new release.</Info>
 
-1. Upgrade your `cargo-shuttle` CLI one of the options below:
+1. Upgrade your `cargo-shuttle` CLI with one of the options below:
    - `curl -sSfL https://www.shuttle.rs/install | bash` (Linux and macOS)
    - `cargo binstall cargo-shuttle`
    - `cargo install cargo-shuttle`
 
 2. Update your project's `shuttle-...` dependencies in `Cargo.toml`:
    ```toml Cargo.toml
-   shuttle-runtime = "0.33.0"
+   shuttle-runtime = "0.34.0"
    # etc
    ```
 
