--- a/tutorials/url-shortener.mdx
+++ b/tutorials/url-shortener.mdx
@@ -129,9 +129,9 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0"
-shuttle-rocket = { version = "0.33.0" }
-shuttle-runtime = { version = "0.33.0" }
-tokio = { version = "1.26.0" }
+shuttle-rocket = "0.34.0"
+shuttle-runtime = "0.34.0"
+tokio = "1.26.0"
 ```
 
 The `init` command also created a new Shuttle project for us. This starts an
@@ -152,8 +152,8 @@ $ cargo shuttle deploy
    Compiling rocket_http v0.5.0
    Compiling rocket_codegen v0.5.0
    Compiling rocket v0.5.0
-   Compiling shuttle-rocket v0.33.0
-   Compiling shuttle-runtime v0.33.0
+   Compiling shuttle-rocket v0.34.0
+   Compiling shuttle-runtime v0.34.0
    Compiling url-shortener v0.1.0 (/opt/shuttle/crates/url-shortener)
     Finished dev [unoptimized + debuginfo] target(s) in 1m 01s
 
