--- a/introduction/what-is-shuttle.mdx
+++ b/introduction/what-is-shuttle.mdx
@@ -34,7 +34,7 @@ To make life easier we have implemented all the boilerplate required for these R
 
 - [Axum](/examples/axum)
 - [Actix Web](/examples/actix)
-- [Rocket](/examples/other)
+- [Rocket](/examples/rocket)
 - [Warp](/examples/other)
 - [Tower](/examples/other)
 - [Salvo](/examples/other)
