update examples to axum 0.7

--- a/examples/actix-cookie-authentication.mdx
+++ b/examples/actix-cookie-authentication.mdx
@@ -158,6 +158,6 @@ Looking to extend this example? Here's a couple of ideas to get you started:
 
 ---
 
-<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+<Snippet file="other-frameworks.mdx" />
 
-<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
+<Snippet file="check-examples.mdx" />
