--- a/examples/actix-postgres.mdx
+++ b/examples/actix-postgres.mdx
@@ -146,6 +146,6 @@ Interested in extending this example? Here's as couple of ideas:
 - Add static files to show your records
 ---
 
-<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+<Snippet file="other-frameworks.mdx" />
 
-<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
+<Snippet file="check-examples.mdx" />
