--- a/examples/actix-static-files.mdx
+++ b/examples/actix-static-files.mdx
@@ -78,6 +78,6 @@ You can extend this example by adding more routes that serve other files.
 
 ---
 
-<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+<Snippet file="other-frameworks.mdx" />
 
-<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
+<Snippet file="check-examples.mdx" />
