--- a/examples/axum-static-files.mdx
+++ b/examples/axum-static-files.mdx
@@ -10,17 +10,16 @@ This example has one route at `/` where the homepage is served and shows you how
 Note that static assets are declared in the `Shuttle.toml` file.
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+
 ```bash
 cargo shuttle init --from shuttle-hq/shuttle-examples \
- --subfolder axum/static-files
+  --subfolder axum/static-files
 ```
 
 ## Code
 
 <CodeGroup>
 ```rust src/main.rs
-use std::path::PathBuf;
-
 use axum::{routing::get, Router};
 use tower_http::services::ServeDir;
 
@@ -29,10 +28,10 @@ async fn hello_world() -> &'static str {
 }
 
 #[shuttle_runtime::main]
-async fn axum() -> shuttle_axum::ShuttleAxum {
+async fn main() -> shuttle_axum::ShuttleAxum {
     let router = Router::new()
         .route("/", get(hello_world))
-        .nest_service("/assets", ServeDir::new(PathBuf::from("assets")));
+        .nest_service("/assets", ServeDir::new("assets"));
 
     Ok(router.into())
 }
@@ -58,11 +57,11 @@ edition = "2021"
 publish = false
 
 [dependencies]
-axum = "0.6.18"
+axum = "0.7.3"
 shuttle-axum = "0.35.0"
 shuttle-runtime = "0.35.0"
 tokio = "1.28.2"
-tower-http = { version = "0.4.0", features = ["fs"] }
+tower-http = { version = "0.5.0", features = ["fs"] }
 ```
 
 ```toml Shuttle.toml
@@ -78,6 +77,6 @@ You can extend this example by adding more routes that serve other files.
 
 ---
 
-<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+<Snippet file="other-frameworks.mdx" />
 
-<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
+<Snippet file="check-examples.mdx" />
