--- a/examples/axum-websockets.mdx
+++ b/examples/axum-websockets.mdx
@@ -10,18 +10,19 @@ This example shows how to use a WebSocket to show the live status of the Shuttle
 There are a few routes available:
 - `/` - the homepage route where you can find the `index.html` page.
 - `/ws` - the route that handles websockets.
- 
+
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+
 ```bash
 cargo shuttle init --from shuttle-hq/shuttle-examples \
- --subfolder axum/websocket
+  --subfolder axum/websocket
 ```
 
 ## Code
 
 <CodeGroup>
 ```rust src/main.rs
-use std::{path::PathBuf, sync::Arc, time::Duration};
+use std::{sync::Arc, time::Duration};
 
 use axum::{
     extract::{
@@ -34,8 +35,6 @@ use axum::{
 };
 use chrono::{DateTime, Utc};
 use futures::{SinkExt, StreamExt};
-use hyper::{Client, Uri};
-use hyper_tls::HttpsConnector;
 use serde::Serialize;
 use shuttle_axum::ShuttleAxum;
 use tokio::{
@@ -43,7 +42,6 @@ use tokio::{
     time::sleep,
 };
 use tower_http::services::ServeDir;
-
 
 struct State {
     clients_count: usize,
@@ -63,10 +61,8 @@ struct Response {
 
 #[shuttle_runtime::main]
 async fn axum() -> ShuttleAxum {
-// create a receiver/sender for a channel for us to send and receive messages over
     let (tx, rx) = watch::channel(Message::Text("{}".to_string()));
 
-// generate state
     let state = Arc::new(Mutex::new(State {
         clients_count: 0,
         rx,
@@ -76,16 +72,10 @@ async fn axum() -> ShuttleAxum {
     let state_send = state.clone();
     tokio::spawn(async move {
         let duration = Duration::from_secs(PAUSE_SECS);
-        let https = HttpsConnector::new();
-        let client = Client::builder().build::<_, hyper::Body>(https);
-        let uri: Uri = STATUS_URI.parse().unwrap();
-	
-	// every 15 seconds, send a HTTP request to the URL we want to check
-	
+
         loop {
-		// if OK, send a response to all connected clients
-		// if not, break loop
-            let is_up = client.get(uri.clone()).await.is_ok();
+            let is_up = reqwest::get(STATUS_URI).await;
+            let is_up = is_up.is_ok();
 
             let response = Response {
                 clients_count: state_send.lock().await.clients_count,
@@ -93,7 +83,7 @@ async fn axum() -> ShuttleAxum {
                 is_up,
             };
             let msg = serde_json::to_string(&response).unwrap();
-		
+
             if tx.send(Message::Text(msg)).is_err() {
                 break;
             }
@@ -104,7 +94,7 @@ async fn axum() -> ShuttleAxum {
 
     let router = Router::new()
         .route("/websocket", get(websocket_handler))
-        .nest_service("/", ServeDir::new(PathBuf::from("static")))
+        .nest_service("/", ServeDir::new("static"))
         .layer(Extension(state));
 
     Ok(router.into())
@@ -270,17 +260,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.6.18", features = ["ws"] }
+axum = { version = "0.7.3", features = ["ws"] }
 chrono = { version = "0.4.26", features = ["serde"] }
 futures = "0.3.28"
-hyper = { version = "0.14.26", features = ["client", "http2"] }
-hyper-tls = "0.5.0"
+reqwest = "0.11.23"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 shuttle-axum = "0.35.0"
 shuttle-runtime = "0.35.0"
 tokio = "1.28.2"
-tower-http = { version = "0.4.0", features = ["fs"] }
+tower-http = { version = "0.5.0", features = ["fs"] }
 ```
 
 ```toml Shuttle.toml
@@ -294,6 +283,6 @@ Once you've cloned the example, launch it locally using `cargo shuttle run` and 
 
 ---
 
-<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+<Snippet file="other-frameworks.mdx" />
 
-<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip> 
+<Snippet file="check-examples.mdx" /> 
