--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -13,6 +13,7 @@ This section revolves around simple Axum examples you can get quickly started wi
 <Tip>If you are looking for step-by-step guides, check out our [How To](../tutorials) section.</Tip>
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+
 ```bash
 cargo shuttle init --template axum
 ```
@@ -41,7 +42,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.6.18"
+axum = "0.7.3"
 shuttle-axum = "0.35.0"
 shuttle-runtime = "0.35.0"
 tokio = "1.28.2"
@@ -50,6 +51,6 @@ tokio = "1.28.2"
 
 ---
 
-<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+<Snippet file="other-frameworks.mdx" />
 
-<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
+<Snippet file="check-examples.mdx" />
