--- a/examples/poise.mdx
+++ b/examples/poise.mdx
@@ -80,6 +80,6 @@ tokio = "1.28.2"
 </CodeGroup>
 
 ---
-<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+<Snippet file="other-frameworks.mdx" />
 
-<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
+<Snippet file="check-examples.mdx" />
