--- a/community/get-involved.mdx
+++ b/community/get-involved.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Get Involved"
+icon: "hand-holding-hand"
 ---
 
 If you are wondering what the best way is to get involved, here's how:
