--- a/community/open-source.mdx
+++ b/community/open-source.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Open Source"
 description: "Shuttle is Open Source."
+icon: "osi"
 ---
 
 We are firm believers that Open Source is the key to a long-term sustainable and
