--- a/configuration/logs.mdx
+++ b/configuration/logs.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Logs"
 description: "Tracing or logging in Shuttle apps."
+icon: "list"
 ---
 
 Shuttle will record anything your application writes to `stdout`, e.g. a `tracing` or `log` crate configured to write to `stdout`,
