--- a/configuration/project-name.mdx
+++ b/configuration/project-name.mdx
@@ -1,6 +1,7 @@
 ---
 title: Project name
 description: How Shuttle project names work
+icon: "signature"
 ---
 
 Your Shuttle Project Name determines which subdomain your project is hosted on (`https://<project-name>.shuttleapp.rs/`).
