--- a/getting-started/idle-projects.mdx
+++ b/getting-started/idle-projects.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Idle Projects"
+icon: "clock"
 ---
 
 To help handle the load of our users, and to help them save on compute costs (Pro tier),
