--- a/getting-started/local-run.mdx
+++ b/getting-started/local-run.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Local Run"
 description: "Test your Shuttle app on your local system"
+icon: "code"
 ---
 
 We will assume that you have already initialized a project. If you haven't, you should
