--- a/getting-started/shuttle-commands.mdx
+++ b/getting-started/shuttle-commands.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Command Line Interface"
+icon: "terminal"
 ---
 
 Interaction with the Shuttle services is mainly done with through the `cargo-shuttle` Command Line Interface (CLI).
