--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Welcome"
 description: "Shuttle is a Rust-native cloud development platform that lets you deploy your Rust apps for free."
+icon: "hand-wave"
 ---
 
 <CardGroup>
