--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -1,6 +1,7 @@
 ---
 title: Secrets
 description: Including secrets in your deployment
+icon: "user-secret"
 ---
 
 This plugin manages secrets on [Shuttle](https://www.shuttle.rs).
