--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Shuttle Shared Databases"
+icon: "share"
 ---
 
 This plugin manages databases on [Shuttle](https://www.shuttle.rs) and connects them to your app. A shared database
