--- a/resources/shuttle-turso.mdx
+++ b/resources/shuttle-turso.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Shuttle Turso"
+icon: "database"
 ---
 
 This plugin allows services to connect to a [Turso](https://turso.tech) database. Turso is an edge-hosted distributed database based on libSQL, a SQLite fork.
