--- a/support/delete-project.mdx
+++ b/support/delete-project.mdx
@@ -1,6 +1,7 @@
 ---
 title: Delete project
 description: How to delete projects, and how to solve common issues
+icon: "trash-can"
 ---
 
 <Warning>Deleting old projects can fail due to outdated or corrupt data. If you have tried all the steps below, but they keep failing or if a resource refuses to be deleted, please contact us on *support@shuttle.rs* from the email associated with your GitHub account. There, we can assist you with manually deleting projects.</Warning>
