--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Frequently Asked Questions"
+icon: "comment-question"
 ---
 
 This section is aimed at collecting common questions users have to provide documented answers.
