--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Troubleshooting"
+icon: "bug"
 ---
 
 This section is aimed at collecting common issues users have to provide quick debug solutions.
