--- a/configuration/files.mdx
+++ b/configuration/files.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Deployment files"
 description: "How to handle files and folder for deployment"
+icon: "file"
 ---
 
 This page answers:
