--- a/introduction/what-is-shuttle.mdx
+++ b/introduction/what-is-shuttle.mdx
@@ -1,6 +1,7 @@
 ---
 title: "What is Shuttle?"
 description: "Shuttle is a Rust-native cloud development platform that lets you deploy your app while also taking care of all of your infrastructure."
+icon: "question"
 ---
 
 ![](/images/infra-from-code.gif)
