--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -7,7 +7,7 @@ icon: "aws"
 
 This plugin provisions AWS RDS databases on [Shuttle](https://www.shuttle.rs). The following engines are supported:
 - Postgres
-- MySql
+- MySQL
 - MariaDB
 
 ## RDS vs Shared DB
@@ -17,15 +17,16 @@ This plugin provisions AWS RDS databases on [Shuttle](https://www.shuttle.rs). T
 - Flexible: AWS RDS instances on the Shuttle platform can be customised to suit your needs. Instance size can be increased from the default and AWS RDS features can be enabled or disabled.
 
 On *AWS RDS* we offer:
-- MariaDB
-- MySQL
 - Postgres
+- MySQL
+- MariaDB
 
 With the *Shared DB* we offer:
-- MongoDB
 - Postgres
+- MongoDB
 
 ## Default RDS Instance
+
 The RDS instance created by Shuttle has the following specifications and features by default:
 - 2 vCPU
 - 1 GB Memory
@@ -43,11 +44,74 @@ Shuttle makes sure that any data stored in your provisioned database is stored p
 
 ## Usage
 
-This plugin is used identically to [Shuttle Shared DB](./shuttle-shared-db) with the following differences:
+Start by adding `shuttle-aws-rds` to the dependencies for your service.
+Each type of database is behind its own feature flag and macro attribute path.
 
-- Use the crate `shuttle-aws-rds` instead of `shuttle-shared-db`.
-- The feature flags for each engine are `postgres`, `mysql`, and `mariadb`.
-- If you add the `sqlx` flag for MySQL or MariaDB, the output type is `sqlx::MySqlPool`.
+| Engine   | Feature flag | Attribute path |
+|----------|--------------|----------------|
+| Postgres | `postgres`   | `shuttle_aws_rds::Postgres` |
+| MySQL    | `mysql`      | `shuttle_aws_rds::MySql` |
+| MariaDB  | `mariadb`    | `shuttle_aws_rds::MariaDB` |
+
+### Output type
+
+By default, you can get the connection string to the database and connect to it with your preferred library.
+You can also specify other return types to get rid of common boilerplate.
+
+Depending on which type declaration is used as the output type in the macro, you might need to activate additional feature flags:
+
+| Engine   | Feature flag | Type declaration | Description |
+|----------|--------------|------------------|-------------|
+| Any | | `String` | The connection string including username and password |
+| Postgres | `sqlx` (with rustls) or `sqlx-native-tls` | `sqlx::PgPool` | An sqlx connection pool with reasonable defaults |
+| MySQL | `sqlx` (with rustls) or `sqlx-native-tls` | `sqlx::MySqlPool` | An sqlx connection pool with reasonable defaults |
+| MariaDB | `sqlx` (with rustls) or `sqlx-native-tls` | `sqlx::MySqlPool` | An sqlx connection pool with reasonable defaults |
+
+Lastly, add a macro annotaion to the Shuttle main function. Here are examples for Postgres:
+
+```rust
+// Use the connection string
+#[shuttle_runtime::main]
+async fn main(#[shuttle_aws_rds::Postgres] conn_str: String) -> ... { ... }
+
+// With sqlx feature flag, get a PgPool connected automatically
+#[shuttle_runtime::main]
+async fn main(#[shuttle_aws_rds::Postgres] pool: sqlx::PgPool) -> ... { ... }
+```
+
+### Parameters
+
+All of the AWS RDS macros take the same optional parameter:
+
+| Parameter | Type | Description |
+|-----------|------|-------------|
+| local_uri | &str | If specified, on local runs, use this database instead of starting a Docker container for it |
+
+When passing in strings, you can also insert secrets from `Secrets.toml` using string interpolation.
+To insert the `PASSWORD` secret, pass it in like this:
+
+```rust
+#[shuttle_runtime::main]
+async fn main(
+    #[shuttle_aws_rds::Postgres(
+        local_uri = "postgres://postgres:{secrets.PASSWORD}@localhost:16695/postgres"
+    )] conn_str: String,
+) -> ... { ... }
+```
+
+<Note>Caveat: If you are interpolating a secret from `Secrets.dev.toml`, you need to set the same secret in `Secrets.toml` to a empty string so that this step does not crash in deployment.</Note>
+
+The URI should be formatted according to the
+[Postgres](https://www.postgresql.org/docs/current/libpq-connect.html#LIBPQ-CONNSTRING) or
+[MySql and MariaDB](https://dev.mysql.com/doc/refman/8.0/en/connecting-using-uri-or-key-value-pairs.html#connecting-using-uri)
+documentation, depending on which one you're using.
+
+If you do not specify a `local_uri`, then cargo-shuttle will attempt to spin up a Docker container and launch the database inside of it.
+For this to succeed, you must have Docker installed and you must also have started the Docker engine. If you have not used Docker
+before, the easiest way is to [install the desktop app](https://docs.docker.com/get-docker/) and then launch it in order to start
+the Docker engine.
+
+<Snippet file="connection-string.mdx" />
 
 ## Example
 
