--- a/examples/serenity-todo.mdx
+++ b/examples/serenity-todo.mdx
@@ -271,8 +271,8 @@ serenity = { version = "0.11.5", default-features = false, features = ["client",
 shuttle-secrets = "0.36.0"
 shuttle-serenity = "0.36.0"
 shuttle-runtime = "0.36.0"
-shuttle-shared-db = { version = "0.36.0", features = ["postgres"] }
-sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
+shuttle-shared-db = { version = "0.36.0", features = ["postgres", "sqlx"] }
+sqlx = "0.7.1"
 tokio = "1.26.0"
 tracing = "0.1.37"
 ```
