--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -5,29 +5,28 @@ icon: "aws"
 
 <Snippet file="pro-feature.mdx" />
 
-This plugin provisions databases on AWS RDS using [Shuttle](https://www.shuttle.rs). The following engines are supported:
+This plugin provisions AWS RDS databases on [Shuttle](https://www.shuttle.rs). The following engines are supported:
 - Postgres
-- MySql
+- MySQL
 - MariaDB
 
-{/* TODO: Write more about the advantages of RDS vs shared */}
-
-
 ## RDS vs Shared DB
+
 - Dedicated Instance: Each instance of AWS RDS is it's own dedicated instance.
 - Stability and Security: AWS RDS has greater stability due to it being a service directly offered by AWS, and also greater security due to being a dedicated instance.
 - Flexible: AWS RDS instances on the Shuttle platform can be customised to suit your needs. Instance size can be increased from the default and AWS RDS features can be enabled or disabled.
 
 On *AWS RDS* we offer:
-- MariaDB
-- MySQL
 - Postgres
+- MySQL
+- MariaDB
 
 With the *Shared DB* we offer:
-- MongoDB
 - Postgres
+- MongoDB
 
 ## Default RDS Instance
+
 The RDS instance created by Shuttle has the following specifications and features by default:
 - 2 vCPU
 - 1 GB Memory
@@ -44,33 +43,63 @@ If you require a different configuration, please contact us on [Discord](https:/
 Shuttle makes sure that any data stored in your provisioned database is stored permanently and will persist if you redeploy your server via `cargo shuttle deploy`, as well as if you restart your service via `cargo shuttle project restart`.
 
 ## Usage
-Add `shuttle-aws-rds` to the dependencies for your service.
-Each type of database is behind the following feature flag and attribute path. `*-rustls` feature enables `rustls`-based implementation, otherwise some flavour of `native-tls` is used.
 
-| Engine   | Feature flags | Attribute path | Return type |
-|----------|---------------|----------------|-------------|
-| Postgres | `postgres` or `postgres-rustls` | shuttle_aws_rds::Postgres | `sqlx::PgPool` |
-| MySql    | `mysql` or `mysql-rustls` | shuttle_aws_rds::MySql | `sqlx::MySqlPool` |
-| MariaDB  | `mariadb` or `mariadb-rustls` | shuttle_aws_rds::MariaDB | `sqlx::MySqlPool` |
+Start by adding `shuttle-aws-rds` to the dependencies for your service.
+Each type of database is behind its own feature flag and macro attribute path.
+
+| Engine   | Feature flag | Attribute path |
+|----------|--------------|----------------|
+| Postgres | `postgres`   | `shuttle_aws_rds::Postgres` |
+| MySQL    | `mysql`      | `shuttle_aws_rds::MySql` |
+| MariaDB  | `mariadb`    | `shuttle_aws_rds::MariaDB` |
+
+### Output type
+
+By default, you can get the connection string to the database and connect to it with your preferred library.
+You can also specify other return types to get rid of common boilerplate.
+
+Depending on which type declaration is used as the output type in the macro, you might need to activate additional feature flags:
+
+| Engine   | Feature flag | Type declaration | Description |
+|----------|--------------|------------------|-------------|
+| Any | | `String` | The connection string including username and password |
+| Postgres | `sqlx` (with rustls) or `sqlx-native-tls` | `sqlx::PgPool` | An sqlx connection pool with reasonable defaults |
+| MySQL | `sqlx` (with rustls) or `sqlx-native-tls` | `sqlx::MySqlPool` | An sqlx connection pool with reasonable defaults |
+| MariaDB | `sqlx` (with rustls) or `sqlx-native-tls` | `sqlx::MySqlPool` | An sqlx connection pool with reasonable defaults |
+
+Lastly, add a macro annotaion to the Shuttle main function. Here are examples for Postgres:
+
+```rust
+// Use the connection string
+#[shuttle_runtime::main]
+async fn main(#[shuttle_aws_rds::Postgres] conn_str: String) -> ... { ... }
+
+// With sqlx feature flag, get a PgPool connected automatically
+#[shuttle_runtime::main]
+async fn main(#[shuttle_aws_rds::Postgres] pool: sqlx::PgPool) -> ... { ... }
+```
 
 ### Parameters
-| Parameter | Type | Default | Description |
-|-----------|------|---------|-------------|
-| local_uri | str  | `None`  | If specified, on local runs, connect to this database instead of starting a Docker container for it. |
 
-When setting the `local_uri` you can also insert secrets from `Secrets.toml` using string interpolation. To insert the
-`PASSWORD` secret, pass it in like this:
+All of the AWS RDS macros take the same optional parameter:
+
+| Parameter | Type | Description |
+|-----------|------|-------------|
+| local_uri | &str | If specified, on local runs, use this database instead of starting a Docker container for it |
+
+When passing in strings, you can also insert secrets from `Secrets.toml` using string interpolation.
+To insert the `PASSWORD` secret, pass it in like this:
 
 ```rust
 #[shuttle_runtime::main]
-async fn tide(
+async fn main(
     #[shuttle_aws_rds::Postgres(
         local_uri = "postgres://postgres:{secrets.PASSWORD}@localhost:16695/postgres"
-    )] pool: PgPool,
-) -> ShuttleTide<MyState> { ... }
+    )] conn_str: String,
+) -> ... { ... }
 ```
 
-<Note>If you are interpolating a secret from `Secrets.dev.toml`, you need to set the same secret in `Secrets.toml` to a empty string so that this step does not crash in deployment.</Note>
+<Note>Caveat: If you are interpolating a secret from `Secrets.dev.toml`, you need to set the same secret in `Secrets.toml` to a empty string so that this step does not crash in deployment.</Note>
 
 The URI should be formatted according to the
 [Postgres](https://www.postgresql.org/docs/current/libpq-connect.html#LIBPQ-CONNSTRING) or
@@ -86,7 +115,7 @@ the Docker engine.
 
 ## Example
 
-This snippet shows the main function of a tide app that uses the `shuttle_aws_rds::Postgres` attribute to provision an RDS Postgres database.
+This snippet shows the main function of a tide app that uses the `#[shuttle_aws_rds::Postgres]` attribute macro to provision an RDS Postgres database.
 It gives you an authenticated [sqlx Pool](https://docs.rs/sqlx/latest/sqlx/pool/index.html), which you can use to interact with the database.
 
 ```rust main.rs
