--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -84,16 +84,16 @@ DISCORD_TOKEN = 'the contents of your discord token'
 
 ```toml Cargo.toml
 [package]
-name = "hello-world"
+name = "hello-world-serenity-bot"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
-shuttle-serenity = "0.37.0"
+serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 shuttle-runtime = "0.37.0"
-serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 shuttle-secrets = "0.37.0"
+shuttle-serenity = "0.37.0"
 tokio = "1.26.0"
 tracing = "0.1.37"
 ```
