--- a/configuration/domain-names.mdx
+++ b/configuration/domain-names.mdx
@@ -15,19 +15,17 @@ Adding a custom domain to your project follows these steps:
 - set up a DNS record to make it point to your Shuttle server, and
 - get an SSL certificate that enables HTTPS traffic to your project.
 
-## Set up DNS record
+# Set up DNS record
 
 The process for setting up the required DNS rule looks different depending on which type of domain and registrar you have.
 
-### Cloudflare
+## Cloudflare
 
-If you have your domain name on Cloudflare, the process is quite simple:
+If you have your domain name on Cloudflare, the process is quite simple. Go to `Websites -> <your domain> -> DNS -> Records -> Add Record`, then follow the relevant section below.
 
-Go to `Websites -> <your domain> -> DNS -> Records -> Add Record`.
+### Root domain
 
----
-
-If you are adding a root-level domain, add a `CNAME` record from `@` to your `.shuttleapp.rs` subdomain. Disable the Proxy.
+Add a `CNAME` record from `@` to your `.shuttleapp.rs` subdomain. Disable the Proxy.
 
 ![cloudflare root cname](/images/cloudflare_root_cname.png)
 
@@ -35,23 +33,27 @@ Adding a `CNAME` on the root level here is possible due to Cloudflare's [CNAME f
 
 You can also add a `CNAME` for the `www` subdomain if you also want traffic to `www.example.com` to arrive to your service.
 
----
+### Subdomain
 
-If you are adding a subdomain, add a `CNAME` record from your subdomain to your `.shuttleapp.rs` subdomain. Disable the Proxy.
+Add a `CNAME` record from your subdomain to your `.shuttleapp.rs` subdomain. Disable the Proxy.
 
 ![cloudflare subdomain cname](/images/cloudflare_sub_cname.png)
 
 In the example above, the subdomain `thing` (as in `thing.my-domain.com`) is being directed to `example.shuttleapp.rs`.
 
-### Other DNS providers
+## Other DNS providers
+
+The process for other providers can vary, but here are the general steps. If you want to add docs for a specific provider, feel free to contribute to this page.
+
+### Root domain
 
 If you are adding a root-level domain, add an `A` record that points to the same IP address that is returned by `dig A example.shuttleapp.rs`, which is currently `18.132.234.15`.
 
----
+### Subdomain
 
 If you are adding a subdomain, add a `CNAME` record from your subdomain to your `.shuttleapp.rs` subdomain.
 
-## Set up SSL certificate
+# Set up SSL certificate
 
 When your DNS record has propagated, you want to get an SSL certificate signed by Shuttle.
 
